--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     5. 若您若有不信服可以去聽她們的podcast後再做評估<br>
 </h2>
             <figure>
-                <img src="img.png" />
+                <img src="newlisaworld/img.png" />
             </figure>
 </html>
